--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,12 @@
+2004-05-28  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(SOURCES): Add ai302-containers-indefinite_vectors.ad[sb].
+
+	* ai302-containers-indefinite_vectors.ads,
+	  ai302-containers-indefinite_vectors.adb:
+	Initial revision.
+
 2004-05-27  Pascal Obry  <pascal@obry.org>
 
 	* makefile:
