--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,5 +1,9 @@
 2004-05-28  Pascal Obry  <pascal@obry.org>
 
+	* check_mem.adb:
+	Allow 4 seconds by iteration to complete jobs. This should avoid the
+	 timeout in standard case.
+
 	* afile.adb:
 	Revert previous check-in.
 
