--- a/xsrc/ChangeLog
+++ b/xsrc/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-29  Pascal Obry  <pascal@obry.org>
+
+	* aws-client-xml-input_sources.ads, aws-client-xml-input_sources.adb:
+	Minor reformatting and comment update.
+
+	* aws-client-xml.ads:
+	Minor reformatting and comment update.
+
 2004-05-29  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-client-xml.ads, aws-client-xml-input_sources.ads,
