--- a/xsrc/ChangeLog
+++ b/xsrc/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-29  Pascal Obry  <pascal@obry.org>
 
+	* aws-client-xml.ads:
+	Remove pragma pure has this is a wrong categorisation.
+	Add comment.
+
+2004-05-29  Pascal Obry  <pascal@obry.org>
+
 	* aws-client-xml-input_sources.ads, aws-client-xml-input_sources.adb:
 	Minor reformatting and comment update.
 
