--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-30  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.ads, aws-client.adb:
+	(Set_Streaming_Output): New routine.
+	(HTTP_Connection): Rename Server_Push private field to Streaming,
+	 because such mode could be used not only for server-push.
+
 2004-05-28  Pascal Obry  <pascal@obry.org>
 
 	* aws-containers-tables-set.adb:
