--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,11 @@
+2003-05-31  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* zlib-thin.ads, zlib-thin.adb:
+	Update ZLib-Ada version from latest sources.
+
+	* zlib.ads, zlib.adb:
+	(Is_Open): New routine.
+
 2004-05-28  Pascal Obry  <pascal@obry.org>
 
 	* makefile:
