--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-31  Pascal Obry  <pascal@obry.org>
+
+	* aws-hotplug.adb:
+	Minor reformatting.
+	Update copyright notice.
+
 2004-05-30  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-client.ads, aws-client.adb:
