--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-31  Pascal Obry  <pascal@obry.org>
+
+	* ada2wsdl-parser.adb:
+	Add use clauses for A4G.GNAT_Int and Asis.Extensions to gives
+	 visibility to the Compile routine which is defined in
+	 A4G.GNAT_Int in GNAT version prior to 5.02.
+	(Create_Tree): Remove Compile prefix.
+
 2004-04-14  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
