--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-31  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.ads, aws-client.adb:
+	(SOAP_Post): Add parameter Streaming.
+
 2004-05-31  Pascal Obry  <pascal@obry.org>
 
 	* aws-client.ads:
