--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-31  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* makefile:
+	Add ../xsrc to include directories.
+
 2004-05-29  Pascal Obry  <pascal@obry.org>
 
 	* check_mem.adb:
