--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,17 @@
+2004-06-01  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* huge_response_sec.adb, huge_response_sec.out:
+	New regtest for huge response over secure connection.
+
+	* huge_response_proc.adb:
+	Common code for huge_response_sec and huge_response tests.
+
+	* huge_response.adb:
+	Use huge_response_proc.adb.
+
+	* makefile:
+	Add huge_response_sec.
+
 2004-05-31  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
