--- a/docs/TODO
+++ b/docs/TODO
@@ -158,3 +158,5 @@ implemented:
 
 - Move regtests/demos depending on XML/Ada out of the aws-http tarball in
   the MANIFEST file.
+
+- Document the new hotplug implementation
