--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-02  Pascal Obry  <pascal@obry.org>
+
+	* xmlt_proc.adb:
+	(With_URI): Remove variable as it is not used. Add parameters mode.
+
 2004-06-01  Pascal Obry  <pascal@obry.org>
 
 	* xmlt_proc.adb:
