--- a/xsrc/ChangeLog
+++ b/xsrc/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-02  Pascal Obry  <pascal@obry.org>
+
+	* aws-client-xml-input_sources.adb:
+	(Clean_Buffer): New procedure.
+	(Eof): Call Clean_Buffer after reading data.
+	(Next_Char): Call Clean_Buffer after moving or reading data. Ensure
+	 that ES.Read won't read garbadge at the end of the buffer.
+
 2004-06-01  Pascal Obry  <pascal@obry.org>
 	
 	* aws-client-xml-input_sources.adb:
