--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-02  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.adb:
+	(Read_Internal): Add comment.
+
+	* aws-services-page_server.adb:
+	(Callback): Try to get 404.thtml from AWS.Resourses.
+
 2004-06-01  Pascal Obry  <pascal@obry.org>
 
 	* aws-client.adb:
