--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-02  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(RT_STD): Add nonce.
+
+	* nonce.adb, nonce.out, nvect.ads:
+	Initial revision.
+
 2004-06-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
