--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2004-06-02  Pascal Obry  <pascal@obry.org>
+
+	* aws-digest.adb:
+	(Word): New type.
+	(Nonce_Idx): New atomic variable.
+	(Create_Nonce): Ensure that we do not generate the same nonce
+	 value during a whole second. Use Nonce_Idx to generate the Nonce
+	 MD5 result.
+
 2004-06-02  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-client.adb:
