--- a/xsrc/ChangeLog
+++ b/xsrc/ChangeLog
@@ -1,9 +1,18 @@
+2004-06-03  Pascal Obry  <pascal@obry.org>
+
+	* aws-client-xml-input_sources.adb:
+	(Clean_Buffer): Removed.
+	(Eof): Remove call to Clean_Buffer. Use From.Self.First and
+	 From.Self.Last after having modified them.
+	(Next_Char): Remove call to Clean_Buffer.
+
 2004-06-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-client-xml-input_sources.adb:
 	(Next_Char): Some fixes in comments. Minor reformat.
-	(Clear_Buffer): Add commented pragma Unreferenced and null statement for
-	 be able to turn off Clear_Buffer by one commented line.
+	(Clear_Buffer): Add commented pragma Unreferenced and null
+	 statement for be able to turn off Clear_Buffer by one commented
+	 line.
 
 2004-06-02  Pascal Obry  <pascal@obry.org>
 
