--- a/xsrc/ChangeLog
+++ b/xsrc/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-10  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client-xml-input_sources.adb:
+	(Create): Be sure we have 4 bytes before Read_BOM.
+
 2004-06-04  Pascal Obry  <pascal@obry.org>
 
 	* aws-client-xml-input_sources.adb:
@@ -70,10 +75,10 @@
 	 for handling buffer overrun. Do not use Clean_Buffer.
 
 2004-06-01  Pascal Obry  <pascal@obry.org>
-	
+
 	* aws-client-xml-input_sources.adb:
 	Fix style error introduced in previous check-in.
-	
+
 2004-06-01  Pascal Obry  <pascal@obry.org>
 
 	* aws-client-xml-input_sources.adb:
@@ -122,7 +127,7 @@
 	(Load): New routine.
 
 2004-05-17  Pascal Obry  <pascal@obry.org>
-	
+
 	* aws-jabber.adb:
 	Use AI302.Containers (future standard Ada.Containers library) instead
          of Table_Of...G containers.
