--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-15  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* print_tasks.adb:
+	Procedure for detect tasks leaking in test_all.
+
+	* generate.adb:
+	Call for Print_Tasks.
+
 2004-06-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* tgetparam_proc.adb:
