--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-17  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* sock2_proc.adb:
+	Close server socket.
+
 2004-06-16  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* wait_proc.adb:
