--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2004-06-19  Pascal Obry  <pascal@obry.org>
+
+	* aws-response.ads:
+	Fix typo in comments.
+
+	* aws-server.adb:
+	(Shutdown): Change error messages.
+
+	* aws-server.ads:
+	Minor reformatting.
+
 2004-06-17  Pascal Obry  <pascal@obry.org>
 
 	* aws-pop.adb:
