--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2004-06-24  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.ads:
+	(Timeouts_Values): Fields type become Duration.
+	(No_Timouts): Fields values become Net.Forever.
+
+	* aws-client.adb:
+	(Create): Remove type and value conversion.
+
 2004-06-19  Pascal Obry  <pascal@obry.org>
 
 	* aws-response.ads:
