--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,37 @@
+2004-06-25  Pascal Obry  <pascal@obry.org>
+
+	* strings_maps.ads:
+	Adjust to new AI302 version.
+
+	* ai302-containers-hash_tables.ads, ai302-containers-hash_tables.adb:
+	Sync with main repository.
+
+	* ai302-containers-indefinite_hashed_maps.ads,
+	  ai302-containers-indefinite_hashed_maps.adb: 
+	Sync with main repository.
+
+	* ai302-containers-indefinite_ordered_sets.ads,
+	  ai302-containers-indefinite_ordered_sets.adb: 
+	Sync with main repository.
+
+	* ai302-containers-indefinite_vectors.ads,
+	  ai302-containers-indefinite_vectors.adb: 
+	Sync with main repository.
+
+	* ai302-containers-prime_numbers.ads, 
+	  ai302-containers-prime_numbers.adb: 
+	Sync with main repository.
+
+	* ai302-containers-red_black_trees.ads, 
+	  ai302-containers-red_black_trees.adb: 
+	Sync with main repository.
+
+	* ai302-containers-vectors.ads, ai302-containers-vectors.adb: 
+	Sync with main repository.
+
+	* ai302-containers.ads:
+	Sync with main repository.
+
 2003-05-31  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* zlib-thin.ads, zlib-thin.adb:
