--- a/xsrc/ChangeLog
+++ b/xsrc/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-25  Pascal Obry  <pascal@obry.org>
+
+	* aws-jabber.adb, templates_parser-xml.adb: 
+	Adjust to new AI302 version.	
+
 2004-06-10  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-client-xml-input_sources.adb:
